<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="150dp"
    android:paddingRight="150dp"
    android:background="#228b22"
    tools:context="aperr.android.questionsdescience.Identification"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/compte"
            android:textSize="30sp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="30sp"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_box"
            android:layout_marginTop="5dp"
            android:paddingTop="0dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connexion"
                android:textSize="15sp"
                android:textColor="#FF0000"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nom1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="@string/nom"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:inputType="text"
                        android:hint="@string/nom1"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:textColorHint="#D3D3D3"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/code1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="@string/code"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_code1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:inputType="textPassword"
                        android:hint="@string/code1"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:textColorHint="#D3D3D3"/>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        <TextView
            android:id="@+id/ok_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/valider"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:clickable="true"
            android:background="@drawable/button_box"/>

    </LinearLayout>


</LinearLayout>

