<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aperr.android.questionsdescience.VosNotes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/notes"
            android:textSize="30sp"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/note1"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/note1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/note6"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/note6"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note2"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note2"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note7"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note7"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note3"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note3"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note8"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note8"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note4"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note4"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note9"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note9"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note5"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note5"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/note10"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/note10"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tmoyenne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moyenne"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/moyenne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tclasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/nonclasse"
            android:textSize="25sp"
            android:textColor="#ffff00"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/lclassement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tclassement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classement"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/classement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">>

            <TextView
                android:id="@+id/tntjoueurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nbjoueurs"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/ntjoueurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">>

            <TextView
                android:id="@+id/tntjoueurs_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nbjoueurs_c"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/ntjoueurs_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>

</ScrollView>
