<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aperr.android.questionsdescience.Question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cahier">

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingStart="45dp"
        android:paddingLeft="45dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="#ffffff"
                android:background="@drawable/question_box"/>

            <TextView
                android:id="@+id/textLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_alignTop="@+id/textQuestion"
                android:text="@string/chargement"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:background="@drawable/chargement_box"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/answers_box"
            android:orientation="vertical">

            <TextView
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="#000000"
                android:clickable="true" />

            <TextView
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="19sp"
                android:textColor="#000000"
                android:clickable="true" />

            <TextView
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="19sp"
                android:textColor="#000000"
                android:clickable="true" />

            <TextView
                android:id="@+id/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="19sp"
                android:textColor="#000000"
                android:clickable="true" />


        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/layout_valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:clickable="true"
                android:background="@drawable/button_box"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_suite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/suite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suite"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:clickable="true"
                android:background="@drawable/button_box"/>

            <ImageView
                android:id="@+id/buttonExplication"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:clickable="true"
                android:scaleType="fitXY" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
</ScrollView>